# etl-pipeline-mysql

./: .gitignore  .pre-commit-config.yaml  .pylintrc  db.sql  pyproject.toml  pytest.ini  requirements.txt  run.py
src/drivers/: http_collector_test.py  http_request_test.py  http_requester.py  http_requester_test.py
src/drivers/mocks/: http_collector_mock.py  http_requester_mock.py
src/errors/: load_error.py  transform_error.py
src/infra/: database_connector.py  database_connector_test.py  database_repository.py  database_repository_test.py
src/infra/interfaces/: database_repository.py
src/infra/mocks/: database_repository_mock.py
src/main/: main_pipeline.py
src/stages/extract/: extract_html.py  extract_html_test.py
src/stages/load/: load_data.py  load_data_test.py
src/stages/transform/: transform_raw_data.py  transform_raw_data_test.py
src/stages/transform/mocks/: mock_transform_raw_data.py
