[project]
name = "etl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "pre-commit>=4.5.1",
    "pylint>=4.0.5",
    "pytest>=9.0.3",
    "requests>=2.33.1",
    "requests-mock>=1.12.1",
]
